data-xfer/main/default/objects/Object_Field__mdt/Object_Field__mdt.object-meta.xml
<CustomObject>
    <label>Object Field</label>
    <pluralLabel>Object Fields</pluralLabel>
</CustomObject>