data-xfer/main/default/objects/Object_Field__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>string</fullName>
                <default>true</default>
                <label>string</label>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
            <value>
                <fullName>decimal</fullName>
            </value>
            <value>
                <fullName>reference</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>