data-xfer/main/default/objects/Object_Field__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipLabel>Object Fields</relationshipLabel>
    <relationshipName>Object_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>