data-xfer/main/default/objects/Object_Field__mdt/fields/Referenced_Object__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Object__c</fullName>
    <label>Referenced Object</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipLabel>Object Fields (Referenced Object)</relationshipLabel>
    <relationshipName>Object_Fields1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>