data-xfer/main/default/objects/Object_Field__mdt/fields/Referenced_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Object_Field__c</fullName>
    <label>Referenced Object Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>