data-xfer/main/default/objects/Object_Field__mdt/validationRules/name_is_proper_format.validationRule-meta.xml
<ValidationRule>
    <fullName>name_is_proper_format</fullName>
    <active>true</active>
    <description>The DeveloperName must have the object&apos;s name as a prefix, then have and underscore followed by a max of twelve characters</description>
    <errorConditionFormula>!REGEX(DeveloperName, Object__r.DeveloperName &amp; &apos;_[a-zA-Z0-9]{1,12}&apos;)</errorConditionFormula>
    <errorMessage>The DeveloperName must have the object&apos;s name as a prefix, then have and underscore followed by a max of twelve characters</errorMessage>
</ValidationRule>