data-xfer/main/default/objects/Object_Field__mdt/validationRules/options_must_be_valid_json.validationRule-meta.xml
<ValidationRule>
    <fullName>options_must_be_valid_json</fullName>
    <active>true</active>
    <description>If options is set, it must contain a valid JSON object</description>
    <errorConditionFormula>/* This was an AI generated regex and could probably use some refining, but is adequate for now */
!ISBLANK(Options__c) &amp;&amp;
!REGEX(Options__c, &apos;^\\{\\s*\&quot;([^\&quot;]+)\&quot;\\s*:\\s*\&quot;([^\&quot;]*)\&quot;\\s*(,\\s*\&quot;([^\&quot;]+)\&quot;\\s*:\\s*\&quot;([^\&quot;]*)\&quot;\\s*)*\\}$&apos;)</errorConditionFormula>
    <errorMessage>The options field must contain a valid JSON object</errorMessage>
</ValidationRule>